; ModuleID = '/home/carl/AnghaBench/linux/kernel/time/extr_timekeeping.c_ktime_get_raw.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/time/extr_timekeeping.c_ktime_get_raw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, %struct.timekeeper }
%struct.timekeeper = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@tk_core = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ktime_get_raw() #0 {
  %1 = alloca %struct.timekeeper*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.timekeeper* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @tk_core, i32 0, i32 1), %struct.timekeeper** %1, align 8
  br label %5

5:                                                ; preds = %14, %0
  %6 = call i32 @read_seqcount_begin(i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @tk_core, i32 0, i32 0))
  store i32 %6, i32* %2, align 4
  %7 = load %struct.timekeeper*, %struct.timekeeper** %1, align 8
  %8 = getelementptr inbounds %struct.timekeeper, %struct.timekeeper* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %3, align 4
  %11 = load %struct.timekeeper*, %struct.timekeeper** %1, align 8
  %12 = getelementptr inbounds %struct.timekeeper, %struct.timekeeper* %11, i32 0, i32 0
  %13 = call i32 @timekeeping_get_ns(%struct.TYPE_4__* %12)
  store i32 %13, i32* %4, align 4
  br label %14

14:                                               ; preds = %5
  %15 = load i32, i32* %2, align 4
  %16 = call i64 @read_seqcount_retry(i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @tk_core, i32 0, i32 0), i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %5, label %18

18:                                               ; preds = %14
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @ktime_add_ns(i32 %19, i32 %20)
  ret i32 %21
}

declare dso_local i32 @read_seqcount_begin(i32*) #1

declare dso_local i32 @timekeeping_get_ns(%struct.TYPE_4__*) #1

declare dso_local i64 @read_seqcount_retry(i32*, i32) #1

declare dso_local i32 @ktime_add_ns(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
